--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ app.*.symbols
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 android/key.properties
+key.jks
